[package]
name = "erbridge-api"
version = "0.1.2"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = [
  "fast-rng",
  "macro-diagnostics",
  "serde",
  "v4",
  "v7",
] }

sqlx = { version = "0.8", features = [
  "chrono",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }

aes-gcm = "0.10"
subtle = "2"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = [
  "form",
  "json",
  "rustls",
  "stream",
] }
sha2 = "0.11"
url = "2"

futures = "0.3"

dashmap = "6"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
regex = "1.12.3"
strum = { version = "0.28", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
axum-test = "20"
bytes = "1"
cookie = "0.18"
pg-embed = { version = "1", default-features = false, features = [
  "rt_tokio_migrate"
] }
portpicker = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
  "stream",
] }
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
